2007-01-03  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/src/mimoconv.cpp: Minor improvements

	* itpp/base/random.h: Minor documentation improvement
	
2007-01-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h: Implemented feature request [1216416]. Multiply
	operator `*' of a vector `v' and single-row matrix `m' now works
	for any size of vector `v'. This change is backward compatible
	with the previous implementation.

	* itpp/base/array.h: Fixed a small bug caused by a missing "const"
	keyword in in_range() inline function.

2007-01-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/array.h, tests/array_test.cpp, tests/array_test.ref,
	TODO: Added missing left(), right() and mid() methods to the Array
	class.

2006-12-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/array.h, itpp/base/mat.cpp, itpp/base/mat.h,
	itpp/base/vec.cpp, itpp/base/vec.h: Improved the consistency of
	alloc(), free() and set_size() methods in Array, Mat and Vec
	classes. Further cosmetic changes of separating class interfaces
	from their implementation in these base classes.

2006-12-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.cpp, itpp/base/mat.h, itpp/base/vec.cpp,
	itpp/base/vec.h: Cosmetic changes in order to separate class
	interfaces from implementation. BTW, private init() function
	replaced with initialisation list.

	* doc/Makefile.am, itpp/base/algebra/Makefile.am,
	itpp/base/algebra/sources.mk, itpp/base/bessel/Makefile.am,
	itpp/base/bessel/sources.mk: Removed "lapack.h" and
	"bessel_internal.h" from the list of installed headers. BTW,
	cleaned up the dependency list in the documentation Makefile.

2006-12-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.cpp, itpp/base/random.h, tests/bch_test.ref,
	tests/channel_test.ref, tests/cholesky_test.ref,
	tests/circular_buffer_test.ref, tests/convcode_test.ref,